# environment-variable-tracing

./: .gitignore  CMakeLists.txt  LICENSE
Driver/: analysis-driver.pl
EnvironmentVariableTainting/: CMakeLists.txt  DataFlowFacts.cpp  DataFlowFacts.h  DataFlowUtils.cpp  DataFlowUtils.h  LineNumberStore.h  MonoIntraEnvironmentVariableTracing.cpp  MonoIntraPluginTest.cpp  MonoIntraPluginTest.h  MyIFDSProblem.cpp  MyIFDSProblem.h
IFDSEnvironmentVariableTracing/: CMakeLists.txt  DataFlowFacts.cpp  DataFlowFacts.h  IFDSEnvironmentVariableTracing.cpp  IFDSEnvironmentVariableTracing.h  LineNumberStore.cpp  LineNumberStore.h  MapTaintedArgsToCallee.cpp
IFDSEnvironmentVariableTracing/FlowFunctions/: BranchSwitchInstFlowFunction.cpp  BranchSwitchInstFlowFunction.h  CallToRetFlowFunction.cpp  CallToRetFlowFunction.h  CheckOperandsFlowFunction.cpp  CheckOperandsFlowFunction.h  FlowFunctionBase.cpp  FlowFunctionBase.h  FlowFunctionWrapper.cpp  FlowFunctionWrapper.h  GEPInstFlowFunction.cpp  GEPInstFlowFunction.h  GenerateFlowFunction.cpp  GenerateFlowFunction.h  Identity.h  IdentityFlowFunction.cpp  IdentityFlowFunction.h  MapTaintedArgsToCallee.cpp  MapTaintedArgsToCallee.h  MapTaintedValuesToCallee.cpp  MapTaintedValuesToCallee.h  MapTaintedValuesToCaller.cpp  MapTaintedValuesToCaller.h  MemSetInstFlowFunction.cpp  MemSetInstFlowFunction.h  MemTransferInstFlowFunction.cpp  MemTransferInstFlowFunction.h  PHINodeFlowFunction.cpp  PHINodeFlowFunction.h  ReturnInstFlowFunction.cpp  ReturnInstFlowFunction.h  StoreInstFlowFunction.cpp  StoreInstFlowFunction.h  VAEndInstFlowFunction.cpp  VAEndInstFlowFunction.h  VAStartInstFlowFunction.cpp  VAStartInstFlowFunction.h
IFDSEnvironmentVariableTracing/Stats/: LcovRetValWriter.cpp  LcovRetValWriter.h  LcovWriter.cpp  LcovWriter.h  LineNumberEntry.h  LineNumberWriter.cpp  LineNumberWriter.h  TraceStats.cpp  TraceStats.h  TraceStatsModel.h  TraceStatsWriter.h
IFDSEnvironmentVariableTracing/Utils/: DataFlowUtils.cpp  DataFlowUtils.h  LLVMIRDump.cpp  LLVMIRDump.h  Log.h
IFDSFunctionStats/: CMakeLists.txt  IFDSFunctionStats.cpp  IFDSFunctionStats.h
IFDSProfiling/: CMakeLists.txt  IFDSProfiling.cpp  IFDSProfiling.h
MonoIntraEnvironmentVariableTracing/: CMakeLists.txt  DataFlowFacts.cpp  LineNumberStore.cpp  MonoIntraEnvironmentVariableTracing.cpp  MonoIntraEnvironmentVariableTracing.h
Sample/analysis/: analysis-driver.pl  create-merge-trace.pl  create-report.pl  diff-traces.pl  merge-traces.pl  patch-ir.pl  patch-ir.sh  preprocess-ir.pl  run-analysis.pl
Sample/src/: Makefile
Test/: run-tests.sh  test-result-index.html
Test/000-no-taints/: main.c  main.ll  main.ll.patched  main.ll.preprocessed  out
Test/001-copy-propagation/: line-numbers.txt  main.ll  main.ll.patched  out  static-main-1549838111-trace.txt  static-main-1552243151-trace.txt
Test/002-copy-delete/: line-numbers.txt  main.c  main.ll  main.ll.patched  main.ll.preprocessed  out  static-main-1550311254-trace.txt  static-main-1551301744-trace.txt
Test/010-boolean-operator-1/: main.c  main.ll  main.ll.patched  main.ll.preprocessed  out
Test/011-boolean-operator-and-1/: main-line-numbers.txt  main.c  main.ll  main.ll.patched  main.ll.preprocessed  out  static-main-1549639263-trace.txt  static-main-1552137679-trace.txt
Test/011-boolean-operator-and-2/: main-line-numbers.txt  main.ll  main.ll.patched  main.ll.preprocessed  out  static-main-1549838111-trace.txt  static-main-1551277505-trace.txt
Test/011-boolean-operator-and-3/: main-line-numbers.txt  main.c  main.ll  main.ll.patched  out  static-main-1549639264-trace.txt  static-main-1551277506-trace.txt
Test/011-boolean-operator-and-4/: main-line-numbers.txt  main.ll  main.ll.patched  out  static-main-1550836616-trace.txt  static-main-1551301744-trace.txt
Test/011-boolean-operator-and-5/: main-line-numbers.txt  main.c  main.ll  main.ll.patched  out  static-main-1549639264-trace.txt  static-main-1552156387-trace.txt
Test/011-boolean-operator-and-6/: main-line-numbers.txt  main.c  (+6 more)
Tools/: analysis-driver.pl  create-merge-trace.pl  create-report.pl  diff-traces.pl  merge-traces.pl  patch-ir.pl  patch-ir.sh  preprocess-ir.pl  run-analysis.pl
test/: main-do-while1.c  out  run-tests.sh  test-result-index.html
(+3063 files in other folders)
